--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.mayank.androidbasics">
 
@@ -14,10 +13,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
+        <activity android:name=".Activities.BasicsActivity"></activity>
         <activity
-            android:name=".Activities.BaseActivity"
+            android:name=".Activities.HomeActivity"
             android:label="@string/title_activity_base"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            tools:ignore="InnerclassSeparator">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,11 +26,14 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Activities.HomeActivity">
-        </activity>
-        <activity android:name=".Activities.HelloActivity" />
-        <activity android:name=".Activities.MainActivity" />
-        <activity android:name=".Activities.Testing" />
+            android:name=".Activities.SampleCodesActivity"
+            tools:ignore="InnerclassSeparator"></activity>
+        <activity
+            android:name=".Activities.LoadingActivity"
+            tools:ignore="InnerclassSeparator" />
+        <activity
+            android:name=".Activities.SumActivity"
+            tools:ignore="InnerclassSeparator" />
     </application>
 
 </manifest>
