--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:support-v4:28.0.0'
@@ -33,6 +34,10 @@ dependencies {
 
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'              // Image loading library
+    implementation 'com.mikhaellopez:circularimageview:3.0.2'          // circle image view
+    implementation 'info.hoang8f:fbutton:1.0.5'                        // Animated Buttons
+
 
     implementation 'com.google.firebase:firebase-core:16.0.9'
 }
