--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,16 @@ dependencies {
     implementation 'com.android.volley:volley:1.1.0'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+
+    // retrofit library
+
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+
+    // Retrofit API Interceptor for Debuging
+
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    implementation 'com.mindorks:placeholderview:0.7.1'
+    implementation 'com.google.code.gson:gson:2.8.2'
 }
